# gpu-native-constraint-tensor-fields

./: .gitignore  CITATION.cff  CUDA_NATIVE_METHODOLOGY.md  LICENSE  NOTICE  README.md  ROADMAP.md  pyproject.toml
benchmarks/: README.md  vector_native_report.example.json
cuda/: CMakeLists.txt
cuda/bench/: README.md  timing_probe.cu
cuda/include/: apc_runtime.h
cuda/src/: clause_eval.cu  linear_csr_eval.cu  projection.cu  qubo_energy.cu  qubo_move_score.cu  violation_reduce.cu
docs/: ADAPTERS.md  BENCHMARKING.md  BENCHMARK_SWEEPS.md  BRANCH_TENSOR.md  CHECKED_HANDOFF_DEMO.md  CONTRIBUTING_OPERATORS.md  CROSS_PROJECT_HANDOFF.md  CUDA_BENCHMARK_TIMING.md  CUDA_OPERATOR_PARITY.md  CUDA_SM89_BENCHMARK.md  DEBUGGING.md  DEVICE_LAYOUTS.md  INTERFACE_PROJECTION.md  LAYOUT_MATERIALIZATION.md  MAINTENANCE_RELEASES.md  NEXT_MAJOR_STAGE.md  OPERATOR_REGISTRY.md  ORIGIN.md  PHASE0_COMPLETION.md  PHASE10_COMPLETION.md  PHASE11_COMPLETION.md  PHASE12_COMPLETION.md  PHASE13_COMPLETION.md  PHASE14_COMPLETION.md  PHASE15_COMPLETION.md  PHASE16_COMPLETION.md  PHASE17_COMPLETION.md  PHASE18_COMPLETION.md  PHASE19_COMPLETION.md  PHASE1_COMPLETION.md  PHASE20_COMPLETION.md  PHASE21_COMPLETION.md  PHASE22_COMPLETION.md  PHASE23_COMPLETION.md  PHASE24_COMPLETION.md  PHASE25_COMPLETION.md  PHASE26_COMPLETION.md  PHASE27_COMPLETION.md  PHASE28_COMPLETION.md  PHASE29_COMPLETION.md  (+88 more)
examples/: README.md
native/: CMakeLists.txt
native/include/: apc_runtime.hpp
native/src/: cpu_operator_shim.cpp
scripts/: check_vagent_handoff.py  collect_release_artifacts.py  inspect_benchmark_sweep.py  inspect_cuda_parity.py  inspect_release_artifacts.py  inspect_runtime_debug.py  list_handoff_fixtures.py  list_problem_family_fixtures.py  probe_native_host.py  run_bench.py  run_benchmark_sweep.py  run_checked_handoff_demo.py  run_cuda_bench.py  run_vector_demo_bench.py  smoke_release_evidence.py  verify_public_release.py
tests/: test_adapters.py  test_benchmark.py  test_benchmark_sweep.py  test_benchmark_sweep_report.py  test_benchmark_sweep_runner.py  test_branch_tensor.py  test_checked_handoff_demo.py  test_checked_handoff_fixtures.py  test_cli.py  (+53 more)
(+74 files in other folders)
