[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-native-constraint-tensor-fields"
version = "0.1.0"
description = "GPU-native constraint tensor field prototypes and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "aceroer" }
]

[project.scripts]
apc = "apc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
